@@ -7,18 +7,27 @@
     <groupId>com.epam.tc</groupId>
     <artifactId>MavenProject</artifactId>
     <version>1.0-SNAPSHOT</version>
-  
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-             
+
         <testng.version>7.5</testng.version>
         <checkstyle.version>9.2.1</checkstyle.version>
         <assertj-core.version>3.22.0</assertj-core.version>
         <selenium.version>4.1.1</selenium.version>
         <webdrivermanager.version>5.0.3</webdrivermanager.version>
+        <allure-testng.version>2.17.2</allure-testng.version>
+        <lombok.version>1.18.22</lombok.version>
+        <slf4j-simple.version>1.7.35</slf4j-simple.version>
+        <aspectj.version>1.9.7</aspectj.version>
+        <allure-maven.version>2.11.2</allure-maven.version>
 
         <testng.configs.path>${project.build.testOutputDirectory}</testng.configs.path>
-      
+
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+
     </properties>
 
     <dependencies>
@@ -51,6 +60,21 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j-simple.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -58,7 +82,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -67,17 +91,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
@@ -125,6 +159,9 @@
             </properties>
         </profile>
         <profile>
+            <id>AllCalculatorTests</id>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/AllCalculatorTests.xml</testng.suite.file>
             <id>DivideMultiply</id>
             <properties>
                 <testng.suite.file>${testng.configs.path}/DivideMultiply.xml</testng.suite.file>
@@ -142,5 +179,24 @@
                 <testng.suite.file>${testng.configs.path}/AllTestsHW3.xml</testng.suite.file>
             </properties>
         </profile>
+        <profile>
+            <id>AllureTest</id>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/AllureTest.xml</testng.suite.file>
+            </properties>
+        </profile>
     </profiles>
+
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
+
 </project>
